<resources>
    <string name="app_name">Quadcopter Controller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_auto_control">Controle automático</string>
    <string name="pref_key_minimal_upper_distance">pref_key_minimal_upper_distance</string>
    <string name="pref_title_minimal_upper_distance">Distância mínima superior</string>
    <string name="pref_description_minimal_upper_distance">Distância mínima de objetos
        acima do VANT
    </string>
    <string name="pref_key_minimal_below_distance">pref_key_minimal_below_distance</string>
    <string name="pref_title_minimal_below_distance">Distância mínima inferior</string>
    <string name="pref_description_minimal_below_distance">Distância mínima de objetos
        abaixo do VANT
    </string>
    <string name="pref_key_minimal_side_distance">pref_key_minimal_side_distance</string>
    <string name="pref_title_minimal_side_distance">Distância mínima lateral</string>
    <string name="pref_description_minimal_side_distance">Distância mínima de objetos nas
        laterais do VANT
    </string>
    <string name="pref_key_lock_altitude">pref_key_lock_altitude</string>
    <string name="pref_title_lock_altitude">Travar altitude</string>
    <string name="pref_description_lock_altitude">Manter a altitude de voo fixa na altitude máxima</string>
    <string name="pref_key_maximum_altitude">pref_key_maximum_altitude</string>
    <string name="pref_title_maximum_altitude">Altitude máxima</string>
    <string name="pref_description_maximum_altitude">Altitude máxima de voo</string>
    <string name="pref_key_maximum_inclination">pref_key_maximum_inclination</string>
    <string name="pref_title_maximum_inclination">Inclinação máxima</string>
    <string name="pref_description_maximum_inclination">Inclinação máxima do VANT</string>
    <string name="pref_title_alpha_attitude_sensor">Coeficiente do sensor de atitude</string>
    <string name="pref_key_alpha_attitude_sensor">pref_key_alpha_attitude_sensor</string>
    <string name="pref_description_alpha_attitude_sensor">Coeficiente do filtro complementar do sensor de atitude</string>
    <string name="pref_title_alpha_horizontal_rotation_sensor">Coeficiente do sensor de rotação horizontal</string>
    <string name="pref_key_alpha_horizontal_rotation_sensor">pref_key_alpha_horizontal_rotation_sensor</string>
    <string name="pref_description_alpha_horizontal_rotation_sensor">Coeficiente do filtro complementar do sensor de
        rotação horizontal</string>
    <string name="pref_key_lpf_accelerometer_enable">pref_key_lpf_accelerometer_enable</string>
    <string name="pref_title_lpf_accelerometer_enable">Filtrar o acelerômetro</string>
    <string name="pref_description_lpf_accelerometer_enable">Habilita o filtro LPF das leituras do acelerômetro</string>
    <string name="pref_title_alpha_lpf_accelerometer">Coeficiente do LPF do acelerômetro</string>
    <string name="pref_key_alpha_lpf_accelerometer">pref_key_alpha_lpf_accelerometer</string>
    <string name="pref_description_alpha_lpf_accelerometer">Fator de atenuação (alfa) do filtro passa baixa do acelerômetro</string>
    <string name="pref_key_gyroscope_remove_offset_enable">pref_key_gyroscope_remove_offset_enable</string>
    <string name="pref_title_gyroscope_remove_offset_enable">Remoção de offset do giroscópio</string>
    <string name="pref_description_gyroscope_remove_offset_enable">Subtrai o offset das leituras do giroscópio</string>
    <string name="pref_key_hpf_gyroscope_enable">pref_key_hpf_gyroscope_enable</string>
    <string name="pref_title_hpf_gyroscope_enable">Filtrar o giroscópio</string>
    <string name="pref_description_hpf_gyroscope_enable">Habilita o filtro HPF das leituras do giroscópio</string>
    <string name="pref_title_alpha_hpf_gyroscope">Coeficiente do HPF do giroscópio</string>
    <string name="pref_key_alpha_hpf_gyroscope">pref_key_alpha_hpf_gyroscope</string>
    <string name="pref_description_alpha_hpf_gyroscope">Fator de atenuação (alfa) do filtro passa alta do giroscópio</string>
    <string name="pref_key_magnetometer_remove_offset_enable">pref_key_magnetometer_remove_offset_enable</string>
    <string name="pref_title_magnetometer_remove_offset_enable">Remoção de offset do magnetômetro</string>
    <string name="pref_description_magnetometer_remove_offset_enable">Subtrai o offset das leituras do magnetômetro</string>
    <string name="pref_key_lpf_magnetometer_enable">pref_key_lpf_magnetometer_enable</string>
    <string name="pref_title_lpf_magnetometer_enable">Filtrar o magnetômetro</string>
    <string name="pref_description_lpf_magnetometer_enable">Habilita o filtro LPF das leituras do magnetômetro</string>
    <string name="pref_title_alpha_lpf_magnetometer">Coeficiente do LPF do magnetômetro</string>
    <string name="pref_key_alpha_lpf_magnetometer">pref_key_alpha_lpf_magnetometer</string>
    <string name="pref_description_alpha_lpf_magnetometer">Fator de atenuação (alfa) do filtro passa baixa do magnetômetro</string>
    <string name="pref_category_title_fused_sensors">Fusão de sensores</string>
    <string name="pref_category_title_sensors_pre_processing">Pré-processamento dos sensores</string>
    <string name="pref_category_title_escs">ESCs</string>
    <string name="pref_category_title_tachometers">Tacômetros</string>
    <string name="pref_category_title_sonars">Sonares</string>
    <string name="pref_category_title_inertial_sensors">Sensores inerciais</string>
    <string name="pref_key_esc1_enable">pref_key_esc1_enable</string>
    <string name="pref_key_esc2_enable">pref_key_esc2_enable</string>
    <string name="pref_key_esc3_enable">pref_key_esc3_enable</string>
    <string name="pref_key_esc4_enable">pref_key_esc4_enable</string>
    <string name="pref_key_tachometer1_enable">pref_key_tachometer1_enable</string>
    <string name="pref_key_tachometer2_enable">pref_key_tachometer2_enable</string>
    <string name="pref_key_tachometer3_enable">pref_key_tachometer3_enable</string>
    <string name="pref_key_tachometer4_enable">pref_key_tachometer4_enable</string>
    <string name="pref_key_sonarE_enable">pref_key_sonarE_enable</string>
    <string name="pref_key_sonarNE_enable">pref_key_sonarNE_enable</string>
    <string name="pref_key_sonarN_enable">pref_key_sonarN_enable</string>
    <string name="pref_key_sonarNW_enable">pref_key_sonarNW_enable</string>
    <string name="pref_key_sonarW_enable">pref_key_sonarW_enable</string>
    <string name="pref_key_sonarSW_enable">pref_key_sonarSW_enable</string>
    <string name="pref_key_sonarS_enable">pref_key_sonarS_enable</string>
    <string name="pref_key_sonarSE_enable">pref_key_sonarSE_enable</string>
    <string name="pref_key_sonarUp_enable">pref_key_sonarUp_enable</string>
    <string name="pref_key_sonarDown_enable">pref_key_sonarDown_enable</string>
    <string name="pref_key_barometer_enable">pref_key_barometer_enable</string>
    <string name="pref_key_accelerometer_enable">pref_key_accelerometer_enable</string>
    <string name="pref_key_gyroscope_enable">pref_key_gyroscope_enable</string>
    <string name="pref_key_magnetometer_enable">pref_key_magnetometer_enable</string>
    <string name="pref_description_esc_enable">Habilita o ESC</string>
    <string name="pref_description_tachometer_enable">Habilita o tacômetro</string>
    <string name="pref_description_sonar_enable">Habilita o sonar</string>
    <string name="pref_description_barometer_enable">Habilita o barômetro</string>
    <string name="pref_description_accelerometer_enable">Habilita o acelerômetro</string>
    <string name="pref_description_gyroscope_enable">Habilita o giroscópio</string>
    <string name="pref_description_magnetometer_enable">Habilita o magnetômetro</string>
    <string name="pref_title_esc1_enable">ESC 1</string>
    <string name="pref_title_esc2_enable">ESC 2</string>
    <string name="pref_title_esc3_enable">ESC 3</string>
    <string name="pref_title_esc4_enable">ESC 4</string>
    <string name="pref_title_tachometer1_enable">Tacômetro 1</string>
    <string name="pref_title_tachometer2_enable">Tacômetro 2</string>
    <string name="pref_title_tachometer3_enable">Tacômetro 3</string>
    <string name="pref_title_tachometer4_enable">Tacômetro 4</string>
    <string name="pref_title_sonarE_enable">Sonar E</string>
    <string name="pref_title_sonarNE_enable">Sonar NE</string>
    <string name="pref_title_sonarN_enable">Sonar N</string>
    <string name="pref_title_sonarNW_enable">Sonar NW</string>
    <string name="pref_title_sonarW_enable">Sonar W</string>
    <string name="pref_title_sonarSW_enable">Sonar SW</string>
    <string name="pref_title_sonarS_enable">Sonar S</string>
    <string name="pref_title_sonarSE_enable">Sonar SE</string>
    <string name="pref_title_sonarUp_enable">Sonar superior</string>
    <string name="pref_title_sonarDown_enable">Sonar inferior</string>
    <string name="pref_title_barometer_enable">Barômetro</string>
    <string name="pref_title_accelerometer_enable">Acelerômetro</string>
    <string name="pref_title_gyroscope_enable">Giroscópio</string>
    <string name="pref_title_magnetometer_enable">Magnetômetro</string>
    <string name="pref_key_act_as_client">act_as_client</string>
    <string name="pref_title_act_as_client">Funcionar como cliente</string>
    <string name="pref_description_act_as_client">Define se o dispositivo se comportará como cliente (controle remoto)
        ou servidor (ligado ao quadrotor)</string>
    <string name="pref_key_server_ipv4_address">server_ipv4</string>
    <string name="pref_title_server_ipv4_address">IP do servidor</string>
    <string name="pref_hint_dialog_server_ipv4">192.168.0.1</string>
    <string name="pref_message_dialog_server_ipv4">Digite o IP do servidor</string>
    <string name="pref_key_server_port">server_port</string>
    <string name="pref_description_server_port">Digite a porta utilizada pelo servidor</string>
    <string name="pref_title_server_port">Porta</string>
    <string name="pref_key_enable_sensory_logs">enable_sensory_logs</string>
    <string name="pref_title_enable_sensory_logs">Habilitar logs dos sensores</string>
    <string name="pref_description_enable_sensory_logs">Habilitar logs dos interpretadores dos sensores</string>
    <string name="pref_key_enable_device_tests_logs">enable_device_tests_logs</string>
    <string name="pref_title_enable_device_tests_logs">Habilitar logs dos testes</string>
    <string name="pref_description_enable_device_tests_logs">Habilitar logs dos testes de dispositivos</string>
    <string name="pref_key_enable_rsc_logs">enable_rsc_logs</string>
    <string name="pref_title_enable_rsc_logs">Habilitar logs do RSC</string>
    <string name="pref_description_enable_rsc_logs">Habilitar logs do controlador de velocidade de rotação</string>
    <string name="pref_key_enable_atc_logs">enable_atc_logs</string>
    <string name="pref_title_enable_atc_logs">Habilitar logs do ATC</string>
    <string name="pref_description_enable_atc_logs">Habilitar logs do controlador de atitude</string>
    <string name="pref_key_enable_hrc_logs">enable_hrc_logs</string>
    <string name="pref_title_enable_hrc_logs">Habilitar logs do HRC</string>
    <string name="pref_description_enable_hrc_logs">Habilitar logs do controlador de rotação horizontal</string>
    <string name="pref_key_enable_alc_logs">enable_alc_logs</string>
    <string name="pref_title_enable_alc_logs">Habilitar logs do ALC</string>
    <string name="pref_description_enable_alc_logs">Habilitar logs do controlador de altitude</string>
    <string name="pref_key_log_path">log_path</string>
    <string name="pref_title_log_path">Local dos logs</string>
    <string name="pref_description_log_path">Local de armazenamento dos logs</string>
    <string name="pref_log_path_default">Memória interna</string>
</resources>